--- a/index.html
+++ b/index.html
@@ -156,6 +156,59 @@
               <div class="overview__rating-count">490 votes</div>
             </div>
           </div>
+
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                expedita voluptatibus nobis eos possimus, id minima! Maxime
+                molestiae excepturi consectetur.
+              </p>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id,
+                ipsum.
+              </p>
+              <ul class="list">
+                <li class="list-item">Close to the beach</li>
+                <li class="list-item">Breakfast included</li>
+                <li class="list-item">Free airport shuttle</li>
+                <li class="list-item">Free wifi in all rooms</li>
+                <li class="list-item">Air conditioning and heating</li>
+                <li class="list-item">Pets allowed</li>
+                <li class="list-item">We speak all languages</li>
+                <li class="list-item">Perfect for families</li>
+              </ul>
+              <div class="recommend">
+                <p class="recommend__court">
+                  Rob and 3 other friends recommend this hotel.
+                </p>
+
+                <div class="recommend__friends">
+                  <img
+                    src="./img/user-3.jpg"
+                    alt="Friend 1"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="./img/user-4.jpg"
+                    alt="Friend 2"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="./img/user-5.jpg"
+                    alt="Friend 3"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="./img/user-6.jpg"
+                    alt="Friend 4"
+                    class="recommend__photo"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="user-reviews">User reviews</div>
+          </div>
         </main>
       </div>
     </div>
